src/parser.zig
const std = @import("std");
const token = @import("token.zig");
const lexer = @import("lexer.zig");
const ast = @import("ast.zig");
const err = @import("error.zig");
const compiler = @import("compiler.zig");

pub const Parser = struct {
    allocator: std.mem.Allocator,
    lexer: lexer.Lexer,
    source: []const u8,
    compiler: *compiler.Compiler,

    pub fn init(allocator: std.mem.Allocator, source: []const u8, c: *compiler.Compiler) Parser {
        return Parser{
            .allocator = allocator,
            .lexer = lexer.Lexer.init(source, allocator),
            .source = source,
            .compiler = c,
        };
    }

    fn expect(self: *Parser, ty: token.TokenType, msg: []const u8) !?token.Token {
        const tok = try self.lexer.peek_token();
        if (tok.type != ty) {
            try self.compiler.addError(msg, err.Severity.Error, tok);
            return null;
        }
        return try self.lexer.next();
    }

    // when error occurs and when a production can't sensibly continue
    // (e.g. -> missing in a func type) then call this to reach a good
    // point where u can continue parsing.
    fn sync(self: *Parser, stop_set: []const token.TokenType) !void {
        var depth: usize = 0;
        while (true) {
            const t = try self.lexer.peek_token();
            if (t.type == .eof) return;
            if (depth == 0) {
                for (stop_set) |s| {
                    if (t.type == s) return; // not consume it, as code after this needs this token
                }
            }
            _ = try self.lexer.next();
            switch (t.type) {
                .l_paren, .l_bracket => depth += 1,
                .r_paren, .r_bracket => if (depth > 0) {
                    depth -= 1;
                },
                else => {},
            }
        }
    }

    // error type token
    fn error_type(self: *Parser, tok: token.Token) !*ast.Type {
        const ty = try self.allocator.create(ast.Type);
        ty.* = .{
            .is_optional = false,
            .is_error_union = false,
            .base = .{ .named = .{ .name = "<error>", .args = &[_]*ast.Type{}, .token = tok } },
            .token = tok,
        };
        return ty;
    }

    pub fn parse(self: *Parser) !ast.AST {
        var ast_res = ast.AST.init();
        ast_res.program = try self.parse_program();
        return ast_res;
    }

    pub fn parse_program(self: *Parser) !ast.Program {
        var program = ast.Program{ .items = undefined };
        program.items = try self.parse_items();
        return program;
    }

    pub fn parse_items(self: *Parser) !std.ArrayList(ast.Item) {
        var items: std.ArrayList(ast.Item) = .empty;
        while (!self.lexer.is_end()) {
            var tok = try self.lexer.peek_token();
            if (tok.type == token.TokenType.eof) break;

            var is_pub = false;
            var is_inline = false;

            if (tok.type == token.TokenType.kw_pub) {
                _ = try self.lexer.next();
                is_pub = true;
                tok = try self.lexer.peek_token();
            }
            if (tok.type == token.TokenType.kw_inline) {
                _ = try self.lexer.next();
                is_inline = true;
                tok = try self.lexer.peek_token();
            }

            switch (tok.type) {
                .kw_import => {
                    const import_def = try self.parse_import_def();
                    try items.append(self.allocator, ast.Item{ .import_def = import_def });
                },
                .kw_func => {
                    const func_def = try self.parse_func_def(is_pub, is_inline);
                    try items.append(self.allocator, ast.Item{ .function = func_def });
                },
                .kw_proc => {
                    const proc_def = try self.parse_proc_def(is_pub, is_inline);
                    try items.append(self.allocator, ast.Item{ .proc = proc_def });
                },
                .kw_type => {
                    //todo: error if is_inline set (struct/enum defs take no "inline")
                    var type_def = try self.parse_type_def();
                    type_def.is_pub = is_pub;
                    type_def.is_global = true;
                    try items.append(self.allocator, ast.Item{ .type_def = type_def });
                },
                .kw_extern => {
                    const extern_def = try self.parse_extern_def();
                    try items.append(self.allocator, ast.Item{ .extern_def = extern_def });
                },
                .kw_var => {
                    var var_def = try self.parse_var_def();
                    var_def.is_pub = is_pub;
                    var_def.is_global = true;
                    try items.append(self.allocator, ast.Item{ .var_def = var_def });
                },
                .kw_const => {
                    var const_def = try self.parse_const_def();
                    const_def.is_pub = is_pub;
                    const_def.is_global = true;
                    try items.append(self.allocator, ast.Item{ .const_def = const_def });
                },
                else => {
                    // TODO:: error handling
                    _ = try self.lexer.next();
                    break;
                },
            }
        }
        return items;
    }

    pub fn parse_func_def(self: *Parser, is_pub: bool, is_inline: bool) !ast.FunctionDef {
        const func_tok = try self.lexer.next();
        var func_def = ast.FunctionDef{
            .is_pub = is_pub,
            .is_inline = is_inline,
            .name = "",
            .type_params = .empty,
            .params = undefined,
            .result = undefined,
            .body = undefined,
            .token = func_tok,
        };

        // todo: parse_type_params for the .type_params

        // get the function name
        const name_tok = try self.expect(.ident, "expected function name") orelse token.Token{ .type = .ident, .val = "", .line = func_tok.line, .col = func_tok.col };
        func_def.name = name_tok.val;

        // extect '('
        _ = try self.expect(.l_paren, "expected '('");

        // TODO: type params
        // parse parameters
        func_def.params = try self.parse_params();

        // expect '->'
        _ = try self.expect(.arrow, "expected '->'");

        func_def.result = try self.parse_result();

        // parse block statement
        func_def.body = try self.parse_body();

        return func_def;
    }

    pub fn parse_proc_def(self: *Parser, is_pub: bool, is_inline: bool) !ast.ProcDef {
        const proc_tok = try self.lexer.next();
        var proc_def = ast.ProcDef{
            .is_pub = is_pub,
            .is_inline = is_inline,
            .name = "",
            .type_params = .empty,
            .params = .empty,
            .body = undefined,
            .token = proc_tok,
        };

        const tok = try self.expect(.ident, "expected proc name") orelse token.Token{ .type = .ident, .val = "<error>", .line = proc_tok.line, .col = proc_tok.col };
        proc_def.name = tok.val;

        //todo: parse_type_params

        if (try self.expect(.l_paren, "expected '('") == null) {
            try self.sync(&.{ .r_paren, .kw_end });
        } else {
            proc_def.params = try self.parse_params();
        }

        proc_def.body = try self.parse_body();

        return proc_def;
    }

    pub fn parse_type_def(self: *Parser) !ast.TypeDef {
        var type_def = ast.TypeDef{
            .is_pub = false,
            .is_global = false,
            .variant = undefined,
        };
        // NOTE: no type params for now
        var tok = try self.lexer.next();
        // ident
        const name = try self.lexer.next();
        _ = try self.expect(.eq, "expected '='");

        tok = try self.lexer.peek_token();
        switch (tok.type) {
            .kw_struct => {
                _ = try self.lexer.next();
                const s = try self.parse_struct(name.val);
                type_def.variant = .{ .struct_def = s };
            },
            .kw_enum => {
                _ = try self.lexer.next();
                const e = try self.parse_enum(name.val);
                type_def.variant = .{ .enum_def = e };
            },
            else => {
                const aliased = try self.parse_type();
                _ = try self.expect(.semicolon, "expected ';'");
                type_def.variant = .{ .alias = .{ .name = name.val, .ty = aliased, .token = tok } };
            },
        }

        return type_def;
    }

    pub fn parse_enum(self: *Parser, name: []const u8) !ast.EnumDef {
        var tok = try self.lexer.peek_token();
        var e = ast.EnumDef{
            .is_pub = false,
            .name = name,
            .type_params = .empty,
            .variants = .empty,
            .token = tok,
        };

        try self.parse_enum_variants(&e);

        tok = try self.lexer.peek_token();
        // expect end
        _ = try self.expect(.kw_end, "expected 'end'") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };

        return e;
    }

    pub fn parse_enum_variants(self: *Parser, e: *ast.EnumDef) !void {
        var tok = try self.lexer.peek_token();
        // parse struct fields
        while (true) {
            switch (tok.type) {
                .kw_end => break,
                .ident => {
                    const f = try self.parse_enum_variant();
                    try e.variants.append(self.allocator, f);
                    const nxt = try self.lexer.peek_token();
                    if (nxt.type == .comma) {
                        _ = try self.lexer.next();
                    } else if (nxt.type != .kw_end) {
                        try self.compiler.addError("expected ',' or 'end'", err.Severity.Error, nxt);
                        break;
                    }
                    tok = try self.lexer.peek_token();
                },
                else => {
                    try self.compiler.addError("expected enum variant", err.Severity.Error, tok);
                    try self.sync(&.{ .kw_import, .kw_func, .kw_const, .kw_var, .kw_type, .kw_extern, .kw_pub, .kw_proc });
                    break;
                },
            }
        }
    }

    pub fn parse_enum_variant(self: *Parser) !ast.EnumVariant {
        const tok = try self.lexer.next();
        var variant = ast.EnumVariant{ .name = tok.val, .token = tok };
        const next = try self.lexer.peek_token();
        if (next.type == .l_paren) {
            _ = try self.lexer.next();
            variant.types = try self.parse_type_list();
        }
        return variant;
    }

    pub fn parse_struct(self: *Parser, name: []const u8) !ast.StructDef {
        var tok = try self.lexer.peek_token();
        var s = ast.StructDef{
            .is_pub = false,
            .name = name,
            .type_params = .empty,
            .fields = .empty,
            .methods = .empty,
            .token = tok,
        };

        try self.parse_struct_members(&s);

        tok = try self.lexer.peek_token();
        // expect end
        _ = try self.expect(.kw_end, "expected 'end'") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };

        return s;
    }

    // so ',' between member is optional only if it's before end
    // also methods don't need ',' at all as seperators, as they
    // are explictly blocks that ends with 'end'
    fn check_struct_member_seperator(self: *Parser) !bool {
        const nxt = try self.lexer.peek_token();
        switch (nxt.type) {
            .comma => {
                _ = try self.lexer.next();
                return true;
            },
            .kw_end => return true,
            else => {
                try self.compiler.addError("expected ',' or 'end'", err.Severity.Error, nxt);
                return false;
            },
        }
    }

    pub fn parse_struct_members(self: *Parser, s: *ast.StructDef) !void {
        var tok = try self.lexer.peek_token();
        // parse struct fields and members
        while (true) {
            switch (tok.type) {
                .kw_end => break,
                .kw_func => {
                    const f = try self.parse_func_def(false, false);
                    try s.methods.append(self.allocator, .{ .func = f });
                    tok = try self.lexer.peek_token();
                },
                .kw_pub => {
                    _ = try self.lexer.next();
                    const nxt = try self.lexer.peek_token();
                    switch (nxt.type) {
                        .ident => {
                            const name_tok = try self.lexer.next();
                            std.debug.print("tell this: {s}\n", .{@tagName(name_tok.type)});
                            _ = try self.expect(.colon, "expected ':'");
                            const ty = try self.parse_type();
                            try s.fields.append(self.allocator, .{
                                .is_pub = true,
                                .name = name_tok.val,
                                .type = ty,
                                .token = nxt,
                            });
                            if (!try self.check_struct_member_seperator()) break;
                            tok = try self.lexer.peek_token();
                        },
                        else => {
                            try self.compiler.addError("expected an ident, 'func', or `proc` after `pub`", err.Severity.Error, nxt);
                            try self.sync(&.{ .kw_end, .kw_func, .kw_proc, .kw_pub });
                            tok = try self.lexer.peek_token();
                        },
                    }
                },

                .ident => {
                    const f = try self.parse_struct_fields();
                    try s.fields.append(self.allocator, f);
                    if (!try self.check_struct_member_seperator()) break;
                    tok = try self.lexer.peek_token();
                },

                else => {
                    try self.compiler.addError(
                        "expected struct field",
                        err.Severity.Error,
                        tok,
                    );
                    try self.sync(&.{ .kw_end, .kw_pub });
                    tok = try self.lexer.peek_token();
                },
            }
        }
    }

    pub fn parse_struct_fields(self: *Parser) !ast.StructField {
        var sf = ast.StructField{
            .is_pub = false,
            .name = "",
            .type = undefined,
            .token = undefined,
        };

        // check for pub
        var tok = try self.lexer.peek_token();
        if (tok.type == .kw_pub) {
            sf.is_pub = true;
            _ = try self.lexer.next();
        }

        tok = try self.lexer.next();
        sf.name = tok.val;

        // expect ':'
        _ = try self.expect(.colon, "expected ':'") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };

        // parse type
        sf.type = try self.parse_type();

        tok = try self.lexer.peek_token();

        return sf;
    }

    pub fn parse_struct_literal(self: *Parser) anyerror!ast.FieldInit {
        const tok = try self.lexer.peek_token();
        _ = try self.lexer.next();
        const name = tok.val;
        // expect '='
        _ = try self.expect(.eq, "expected '='") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };

        const e = try self.parse_expression();

        return .{ .name = name, .value = e, .token = tok };
    }

    pub fn parse_extern_def(self: *Parser) !ast.ExternDef {
        var tok = try self.lexer.next();
        const ktok = try self.lexer.next(); // func or proc

        switch (ktok.type) {
            .kw_func => {
                tok = try self.expect(.ident, "expected function name") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };
                _ = try self.expect(.l_paren, "expected '('");
                const parsed = try self.parse_extern_params();
                _ = try self.expect(.arrow, "expected '->'");
                const result = try self.parse_type();
                _ = try self.expect(.semicolon, "expected ';'");

                return ast.ExternDef{
                    .kind = .{
                        .func = .{
                            .name = tok.val,
                            .params = parsed.params,
                            .result = result,
                            .is_variadic = parsed.is_variadic, //todo: implement this '...'
                        },
                    },
                    .token = tok,
                };
            },
            .kw_proc => {
                tok = try self.expect(.ident, "expected proc name") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };
                _ = try self.expect(.l_paren, "expected '('");
                const parsed = try self.parse_extern_params();
                _ = try self.expect(.semicolon, "expected ';'");

                return ast.ExternDef{
                    .kind = .{
                        .proc = .{
                            .name = tok.val,
                            .params = parsed.params,
                            .is_variadic = parsed.is_variadic,
                        },
                    },
                    .token = tok,
                };
            },
            else => {
                try self.compiler.addError("expected func or proc", err.Severity.Error, tok);
                return ast.ExternDef{
                    .kind = .{ .proc = .{ .name = "<error>", .params = .empty, .is_variadic = false } },
                    .token = tok,
                };
            },
        }
    }

    pub fn parse_params(self: *Parser) !std.ArrayList(ast.Param) {
        var params: std.ArrayList(ast.Param) = .empty;

        const first = try self.lexer.peek_token();
        if (first.type == token.TokenType.r_paren) {
            _ = try self.lexer.next();
            return params;
        }

        while (true) {
            try params.append(self.allocator, try self.parse_param());
            const tok = try self.lexer.next();
            switch (tok.type) {
                .r_paren => break,
                .comma => {
                    const nxt = try self.lexer.peek_token();
                    if (nxt.type == token.TokenType.r_paren) {
                        _ = try self.lexer.next();
                        break;
                    }
                    continue;
                },
                else => {
                    try self.compiler.addError("expected ',' or ')'", err.Severity.Error, tok);

                    try self.sync(&.{ .comma, .r_paren });

                    const peek_tok = try self.lexer.peek_token();
                    if (peek_tok.type == .comma) {
                        _ = try self.lexer.next();
                        continue;
                    } else if (peek_tok.type == .r_paren) {
                        _ = try self.lexer.next();
                        break;
                    } else {
                        // can't recover
                        break;
                    }
                    break;
                },
            }
        }

        return params;
    }

    // extern_params   = extern_param { "," extern_param } [ "," "..." ]
    pub fn parse_extern_params(self: *Parser) !struct { params: std.ArrayList(ast.Param), is_variadic: bool } {
        var params: std.ArrayList(ast.Param) = .empty;
        var is_variadic = false;

        const first = try self.lexer.peek_token();
        if (first.type == token.TokenType.r_paren) {
            _ = try self.lexer.next();
            return .{ .params = params, .is_variadic = is_variadic };
        }

        if (first.type == token.TokenType.dot_dot_dot) {
            _ = try self.lexer.next();
            is_variadic = true;
            _ = try self.expect(.r_paren, "expected ')'");
            return .{ .params = params, .is_variadic = is_variadic };
        }

        while (true) {
            try params.append(self.allocator, try self.parse_param());
            const tok = try self.lexer.next();
            switch (tok.type) {
                .r_paren => break,
                .comma => {
                    const nxt = try self.lexer.peek_token();
                    if (nxt.type == token.TokenType.r_paren) {
                        _ = try self.lexer.next();
                        break;
                    }
                    if (nxt.type == token.TokenType.dot_dot_dot) {
                        _ = try self.lexer.next();
                        is_variadic = true;
                        _ = try self.expect(.r_paren, "expected ')'");
                        break;
                    }
                    continue;
                },
                else => {
                    try self.compiler.addError("expected ',' or ')'", err.Severity.Error, tok);
                    try self.sync(&.{ .comma, .r_paren });
                    const peek_tok = try self.lexer.peek_token();
                    if (peek_tok.type == .comma) {
                        _ = try self.lexer.next();
                        continue;
                    } else if (peek_tok.type == .r_paren) {
                        _ = try self.lexer.next();
                        break;
                    } else {
                        break;
                    }
                },
            }
        }
        return .{ .params = params, .is_variadic = is_variadic };
    }

    pub fn parse_param(self: *Parser) !ast.Param {
        var tok = try self.lexer.peek_token();
        var param = ast.Param{
            .name = "",
            .is_const = false,
            .type = undefined,
            .token = undefined,
        };

        // name
        tok = try self.expect(.ident, "expected identifier") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };
        param.name = tok.val;
        param.token = tok;

        // :
        _ = try self.expect(.colon, "expected ':'");

        // type
        if ((try self.lexer.peek_token()).type == .kw_const) {
            _ = try self.lexer.next();
            param.is_const = true;
        }

        param.type = try self.parse_type();
        return param;
    }

    pub fn parse_body(self: *Parser) !std.ArrayList(ast.Stmt) {
        var stmts: std.ArrayList(ast.Stmt) = .empty;
        while (true) {
            const tok = try self.lexer.peek_token();
            if (tok.type == .kw_end or tok.type == .kw_elif or tok.type == .kw_else or tok.type == .eof or tok.type == .kw_case) break;
            try stmts.append(self.allocator, try self.parse_statement());
        }
        const tok = try self.lexer.peek_token();
        switch (tok.type) {
            .kw_end => _ = try self.lexer.next(),
            .kw_elif, .kw_else, .kw_case => {},
            else => {
                try self.compiler.add_sem_error("expected 'end' to close block", .{}, err.Severity.Error, tok);
            },
        }
        return stmts;
    }

    pub fn parse_statement(self: *Parser) !ast.Stmt {
        const tok = try self.lexer.peek_token();

        return switch (tok.type) {
            .kw_var => try self.parse_var_stmt(),
            .kw_const => try self.parse_const_stmt(),
            .kw_static => try self.parse_local_static_var_stmt(),
            .kw_defer => try self.parse_defer_stmt(),
            .kw_unsafe => try self.parse_unsafe_stmt(),
            .kw_return => try self.parse_return_stmt(),
            .kw_break => try self.parse_break(),
            .kw_continue => try self.parse_continue(),
            .kw_if, .kw_match, .kw_while, .kw_for => try self.parse_control_flow_stmt(),
            .ident => {
                // NOTE: temporary print stub
                if (std.mem.eql(u8, tok.val, "bokbok")) {
                    return try self.parse_print_stub();
                } else {
                    return try self.parse_expr_or_assign_stmt();
                }
            },
            else => try self.parse_expr_or_assign_stmt(),
        };
    }

    fn parse_var_stmt(self: *Parser) !ast.Stmt {
        var tok = try self.lexer.next();
        var var_stmt = ast.VarStmt{
            .name = "",
            .type_ann = null,
            .value = undefined,
            .token = tok,
        };

        // expect name ident
        tok = try self.expect(.ident, "expected name ident ") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };
        var_stmt.name = tok.val;

        // if ':' parse type
        tok = try self.lexer.peek_token();
        if (tok.type == token.TokenType.colon) {
            _ = try self.lexer.next();
            var_stmt.type_ann = try self.parse_type();
        }

        // expect '='
        _ = try self.expect(.eq, "expected '='");
        var_stmt.value = try self.parse_expression();

        switch (var_stmt.value.*) {
            .struct_literal => {},
            .unary => |*u| {
                switch (u.operand.*) {
                    .struct_literal => {},
                    else => _ = try self.expect(.semicolon, "expected ';'"),
                }
            },
            // extect ';'
            else => _ = try self.expect(.semicolon, "expected ';'"),
        }

        return ast.Stmt{ .var_stmt = var_stmt };
    }

    fn parse_const_stmt(self: *Parser) !ast.Stmt {
        var tok = try self.lexer.next();
        var const_stmt = ast.ConstStmt{
            .name = "",
            .type_ann = null,
            .value = undefined,
            .token = tok,
        };

        // expect name ident
        tok = try self.expect(.ident, "expected name ident ") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };
        const_stmt.name = tok.val;

        // if ':' parse type
        tok = try self.lexer.peek_token();
        if (tok.type == token.TokenType.colon) {
            _ = try self.lexer.next();
            const_stmt.type_ann = try self.parse_type();
        }

        // expect '='
        _ = try self.expect(.eq, "expected '='");
        const_stmt.value = try self.parse_expression();

        switch (const_stmt.value.*) {
            .struct_literal => {},
            // extect ';'
            else => _ = try self.expect(.semicolon, "expected ';'"),
        }

        return ast.Stmt{ .const_stmt = const_stmt };
    }

    fn parse_break(self: *Parser) !ast.Stmt {
        const tok = try self.lexer.peek_token();
        _ = try self.lexer.next();
        // extect ';'
        _ = try self.expect(.semicolon, "expected ';'");

        return ast.Stmt{ .break_stmt = .{ .token = tok } };
    }

    fn parse_continue(self: *Parser) !ast.Stmt {
        const tok = try self.lexer.peek_token();
        _ = try self.lexer.next();
        // extect ';'
        _ = try self.expect(.semicolon, "expected ';'");

        return ast.Stmt{ .continue_stmt = .{ .token = tok } };
    }

    fn parse_local_static_var_stmt(self: *Parser) !ast.Stmt {
        var tok = try self.lexer.next();
        var lsv_stmt = ast.LocalStaticVarStmt{
            .name = "",
            .type_ann = null,
            .value = undefined,
            .token = tok,
        };

        _ = try self.expect(.kw_var, "expected 'var'");

        tok = try self.expect(.ident, "expected name ident") orelse token.Token{ .type = .ident, .val = "<error>", .line = tok.line, .col = tok.col };
        lsv_stmt.name = tok.val;

        tok = try self.lexer.peek_token();
        if (tok.type == token.TokenType.colon) {
            _ = try self.lexer.next();
            lsv_stmt.type_ann = try self.parse_type();
        }

        _ = try self.expect(.eq, "expected '='");
        lsv_stmt.value = try self.parse_expression();

        _ = try self.expect(.semicolon, "expected ';'");

        return ast.Stmt{ .local_static_var_stmt = lsv_stmt };
    }

    fn parse_defer_stmt(self: *Parser) anyerror!ast.Stmt {
        const tok = try self.lexer.next();
        const statement_list = try self.parse_body();
        return ast.Stmt{ .defer_stmt = .{ .statement_list = statement_list, .token = tok } };
    }

    fn parse_unsafe_stmt(self: *Parser) anyerror!ast.Stmt {
        const tok = try self.lexer.next();
        const body = try self.parse_body();
        return ast.Stmt{ .unsafe_stmt = .{ .body = body, .token = tok } };
    }

    fn parse_return_stmt(self: *Parser) !ast.Stmt {
        const tok = try self.lexer.next();
        if ((try self.lexer.peek_token()).type == .semicolon) {
            _ = try self.lexer.next();
            return ast.Stmt{ .return_stmt = .{ .value = null, .token = tok } };
        }
        const value = try self.parse_expression();
        _ = try self.expect(.semicolon, "expected ';'");
        return ast.Stmt{ .return_stmt = .{ .value = value, .token = tok } };
    }

    fn parse_expr_or_assign_stmt(self: *Parser) !ast.Stmt {
        const tok = try self.lexer.peek_token();
        const expr = try self.parse_expression();
        const op = try self.lexer.peek_token();
        const coop = get_compund_op(op.type);
        if (op.type == .eq or coop != null) {
            _ = try self.lexer.next();
            const value = try self.parse_expression();
            _ = try self.expect(.semicolon, "expected ';'");
            return ast.Stmt{ .assign_stmt = .{ .target = expr, .op = coop, .value = value, .token = tok } };
        }
        _ = try self.expect(.semicolon, "expected ';'");
        return ast.Stmt{ .expr_stmt = .{ .value = expr } };
    }

    fn get_compund_op(ty: token.TokenType) ?ast.CompoundOp {
        return switch (ty) {
            .plus_eq => ast.CompoundOp.add,
            .minus_eq => ast.CompoundOp.sub,
            .star_eq => ast.CompoundOp.mul,
            .slash_eq => ast.CompoundOp.div,
            .percent_eq => ast.CompoundOp.mod,
            .amp_eq => ast.CompoundOp.bit_and,
            .pipe_eq => ast.CompoundOp.bit_or,
            .caret_eq => ast.CompoundOp.bit_xor,
            .shl_eq => ast.CompoundOp.shl,
            .shr_eq => ast.CompoundOp.shr,
            else => null,
        };
    }

    fn parse_print_stub(self: *Parser) !ast.Stmt {
        var tok = try self.lexer.next();
        var stub = ast.PrintStub{ .value = undefined, .token = tok };
        // expect '('
        if (try self.expect(.l_paren, "expected '('") == null) {
            try self.sync(&.{.semicolon});
        }

        tok = try self.lexer.peek_token();
        switch (tok.type) {
            .integer => stub.value = .{ .stub_literal = try self.parse_literal() },
            .ident => stub.value = .{ .stub_ident = try self.parse_ident() },
            else => {
                try self.sync(&.{.semicolon});
            },
        }

        if (try self.expect(.r_paren, "expected ')'") == null) {
            try self.sync(&.{.semicolon});
        }

        // extect ';'
        _ = try self.expect(.semicolon, "expected ';'");

        return ast.Stmt{ .print_stub = stub };
    }

    fn parse_literal(self: *Parser) !ast.LiteralExpr {
        const tok = try self.lexer.next();
        return try self.parse_int_literal(tok);
    }

    fn parse_int_literal(self: *Parser, tok: token.Token) !ast.LiteralExpr {
        const val = std.fmt.parseInt(u64, tok.val, 0) catch {
            try self.compiler.addError("invalid integer literal", err.Severity.Error, tok);
            return .{ .kind = .integer, .ivalue = 0, .raw = tok.val, .token = tok };
        };
        return .{ .kind = .integer, .ivalue = val, .raw = tok.val, .token = tok };
    }

    fn parse_float_literal(self: *Parser, tok: token.Token) !ast.LiteralExpr {
        const val = std.fmt.parseFloat(f64, tok.val) catch {
            try self.compiler.addError("invalid float literal", err.Severity.Error, tok);
            return .{ .kind = .float, .fvalue = 0.0, .raw = tok.val, .token = tok };
        };
        return .{ .kind = .float, .fvalue = val, .raw = tok.val, .token = tok };
    }
